Update 라파 기말대체 과제.md

--- a/라파 기말대체 과제.md
+++ b/라파 기말대체 과제.md
@@ -2,6 +2,9 @@
 라즈베리파이4 수업 기말대체과제
 
 
+블럭도
+![서보모터](https://user-images.githubusercontent.com/103232943/175343649-bf2af77b-0e04-4a7a-9cc3-18b7df6713e9.PNG)
+
 
 플로우 차트
 
